--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>ERC20Token</h1>
+  <h3 id="token_owner"></h3>
+  <h3 id="crowdsale_address"></h3>
   <h3>You have <span class="black"><span id="balance"></span> Tokens</span></h3>
-
   <br>
   <h1>Buy Tokens</h1>
   <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="0.1"></input>
